# deneg

./: README.md
deneg/: demo.py  package.xml  setup.cfg  setup.py
deneg/deneg/: agent.py  deneg.py  internal_deneg.py  utils.py
deneg/test/: test_deneg.py  test_fcl.py
deneg_core/scripts/: agent.py  agent1.py  deneg.py  examples.py  internal_deneg.py  test_deneg.py  utils.py
deneg_msgs/: CMakeLists.txt  package.xml
deneg_msgs/msg/: Alert.msg  Notify.msg  Proposal.msg
